--- a/css/style.css
+++ b/css/style.css
@@ -1,529 +1,174 @@
-* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-body, html {
+*, *:after, *:before {
+	box-sizing: border-box;
+}
+
+body,
+html {
 	font-size: 100%;
-	padding: 0;
 	margin: 0;
-	font-family: Arial, sans-serif;
-	color: #fff;
-	background: #333;
-}
-
-#intro {
-    cursor: pointer;
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    -ms-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-}
-
-.move {
-    left: 100px;
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    -ms-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-}
-
-
-
-
-a {
-	color: #ccc;
-	text-decoration: none;
-}
-
-a:hover {
-	color: #000;
-}
-
-.bp-icon:after {
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	text-align: center;
-	color: #fff;
-	-webkit-font-smoothing: antialiased;
-}
-
-.bp-icon-next:after {
-	content: "\e000";
-}
-.bp-icon-drop:after {
-	content: "\e001";
-}
-.bp-icon-archive:after {
-	content: "\e002";
-}
-.bp-icon-about:after {
-	content: "\e003";
-}
-.bp-icon-prev:after {
-	content: "\e004";
-}
-
-.demos {
-	display: inline-block;
-	line-height: 2.4em;
-	margin-left: 1em;
-	float: right;
-}
-
-.demos a {
-	display: inline-block;
-	color: #fff;
-	margin: 0 0.5em;
-}
-
-.demos a:hover,
-.demos a:focus,
-.demos a.current {
-	color: rgba(0,0,0,.4);
-}
-
-@media screen and (max-width: 73.375em) {
-	.demos {
-		float: none;
-		margin: 0 auto;
-		padding: 0.15em 0;
-	}
-}
-
-html, body,
-.container {
-	position: relative;
-	width: 100%;
-	height: 100%;
+	padding: 0;
 }
 
 body {
-	overflow-y: scroll;
-	background: #333;
+	font-family: Calibri, Arial, sans-serif;
+	color: #CECECE;
+	background: #2A2B30;
 }
 
-.splitlayout {
-	position: relative;
-	overflow-x: hidden;
-	min-height: 100%;
-	width: 100%;
+a {
+	text-decoration: none;
+	color: #f0f0f0;
 }
 
-/* Intro sides */
-.side {
-	position: fixed;
-	top: 0;
-	z-index: 100;
-	width: 50%;
-	height: 100%;
-	text-align: center;
-	-webkit-backface-visibility: hidden;
+a:hover {
+	color: #516977;
 }
 
-.open-left .side,
-.open-right .side {
-	cursor: default;
-}
-
-.overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 499;
-	visibility: hidden;
-	width: 100%;
-	height: 100%;
-	opacity: 0;
-}
-
-.side-left .overlay {
-	background: rgba(0,0,0,0.7);
-}
-
-.side-right .overlay {
-	background: rgba(0,0,0,0.3);
-}
-
-.side-left {
-	left: 0;
-	background: #47da99;
-	color: #fff;
-	outline: 1px solid #47da99; /* avoid gap */
-}
-
-.side-right {
-	right: 0;
-	background: #fff;
-	color: #47da99;
-	outline: 1px solid #fff; /* avoid gap */
-}
-
-/* Intro content, profile image and name, back button */
-.intro-content {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	padding: 0 1em;
-	width: 50%;
-	cursor: pointer;
-	-webkit-transform: translateY(-50%) translateX(-50%);
-	transform: translateY(-50%) translateX(-50%);
-}
-
-.profile {
+/* Blueprint header */
+header {
+	width: 90%;
+	max-width: 69em;
 	margin: 0 auto;
-	width: 140px;
-	height: 140px;
-	border-radius: 50%;
-	background: #47da99;
-}
-
-.profile img {
-	max-width: 100%;
-	border-radius: 50%;
-	opacity: 0.6;
-}
-
-.intro-content h1 > span {
-	display: block;
-	white-space: nowrap;
-}
-
-.intro-content h1 > span:first-child {
-	font-weight: 300;
-	font-size: 2em;
-}
-
-.intro-content h1 > span:nth-child(2) {
-	position: relative;
-	margin-top: 0.5em;
-	padding: 0.8em;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-size: 0.8em;
-}
-
-.intro-content h1 > span:nth-child(2):before {
-	position: absolute;
-	top: 0;
-	left: 25%;
-	width: 50%;
-	height: 2px;
-	background: #fff;
-	content: '';
-}
-
-.side-right .intro-content h1 > span:nth-child(2):before {
-	background: #47da99;
-}
-
-.back {
-	position: fixed;
-	top: 2.6em;
-	z-index: 500;
-	display: block;
-	visibility: hidden;
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	color: #47da99;
+	padding: 6em 1.875em 1.875em;
 	text-align: center;
-	font-size: 22px;
-	line-height: 44px;
-	opacity: 0;
-	pointer-events: none;
 }
 
-.mobile-layout .back { /* fixed positioning will make this not clickable after scrolling on some mobile devices */
-	position: absolute;
+header h1 {
+	font-size: 2.125em;
+	font-weight: 400;
+	line-height: 1.3;
+	margin: 0 0 .6em 0;
 }
 
-.back-left {
-	left: 12.5%;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
-}
-
-.back-right {
-	right: 12.5%;
-	-webkit-transform: translateX(50%);
-	transform: translateX(50%);
-	color: #fff;
-}
-
-.open-right .back-left,
-.open-left .back-right {
-	visibility: visible;
-	opacity: 1;
-	-webkit-transition-delay: 0.3s;
-	transition-delay: 0.3s;
-	pointer-events: auto;
-}
-
-.back:hover {
-	color: #ddd;
-}
-
-/* Pages */
-.page {
-	position: relative;
-	top: 0;
-	overflow: auto;
-	min-height: 100%;
-	width: 75%;
-	height: auto;
-	font-size: 1.4em;
-	-webkit-backface-visibility: hidden;
-}
-
-.page-right {
-	left: 25%;
-	outline: 5px solid #ecf0f1; /* avoid rounding gaps */
-	background: #ecf0f1;
-	color: #97a8b2;
-	-webkit-transform: translateX(100%);
-	transform: translateX(100%);
-}
-
-.splitlayout.open-right {
-	background: #ecf0f1;
-}
-
-.page-left {
-	left: 0;
-	outline: 5px solid #34495e; /* avoid rounding gaps */
-	background: #34495e;
-	color: #fff;
-	text-align: right;
-	-webkit-transform: translateX(-100%);
-	transform: translateX(-100%);
-}
-
-.splitlayout.open-left {
-	background: #34495e;
-}
-
-/* Inner page content */
-.page-inner {
-	padding: 2em;
-}
-
-.page-inner section {
-	padding-bottom: 1em;
-}
-
-.page-inner h2 {
-	margin: 0 0 1em 0;
-	font-weight: 300;
-	font-size: 2.4em;
-}
-
-.page-inner p {
-	font-weight: 300;
-	font-size: 1.2em;
-}
-
-/* All transitions */
-.side,
-.page {
-	-webkit-transition: -webkit-transform 0.6s;
-	transition: transform 0.6s;
-}
-
-.overlay {
-	-webkit-transition: opacity 0.6s, visibility 0.1s 0.6s;
-	transition: opacity 0.6s, visibility 0.1s 0.6s;
-}
-
-.intro-content {
-	-webkit-transition: -webkit-transform 0.6s, top 0.6s;
-	transition: transform 0.6s, top 0.6s;
-}
-
-.intro-content h1,
-.back {
-	-webkit-transition: opacity 0.3s;
-	transition: opacity 0.3s;
-}
-
-/* Open and close */
-
-/* We need to set the position and overflow for the respective page scroll */
-.reset-layout .page,
-.splitlayout.open-right .page-left,
-.splitlayout.open-left .page-right,
-.splitlayout.close-right .page-left,
-.splitlayout.close-left .page-right {
-	position: absolute;
+/* area de ofertas */
+.grid {
+	margin: 0 auto;
+	padding: 50px 15px;
+	max-width: 1200px;
+	text-align: center;
 	overflow: hidden;
-	height: 100%;
 }
 
-.splitlayout.open-right .page-right,
-.splitlayout.open-left .page-left {
+/* ficha para oferta */
+.oferta {
 	position: relative;
-	overflow: auto;
-	height: auto;
+	display: inline-block;
+	vertical-align: top;
+	min-width: 16em;
+	max-width: 18em;
+	margin: 0 1em 2.5em;
+	padding: 1.5em 1.5em 2em;
+	background: #24252A;
+	border-radius: 5px;
+
 }
 
-.open-right .side-left .overlay,
-.open-left .side-right .overlay {
-	visibility: visible;
-	opacity: 1;
-	-webkit-transition: opacity 0.6s;
-	transition: opacity 0.6s;
+.oferta-titulo {
+	font-size: 150%;
+	margin: 1em 0 0;
 }
 
-/* Right side open */
-.open-right .side-left {
-	-webkit-transform: translateX(-60%);
-	transform: translateX(-60%);
+.oferta-salario {
+	font-weight: bold;
+	color: #797BED;
 }
 
-.open-right .side-right {
-	z-index: 200;
-	-webkit-transform: translateX(-150%);
-	transform: translateX(-150%);
+.oferta-descripcion,
+.oferta-requerimeintos,
+.oferta-salario {
+	display: block;
+	padding: 1em 0;
 }
 
-.close-right .side-right {
-	z-index: 200;
+.oferta-empresa {
+	display: block;
+	padding: .5em 0;
 }
 
-.open-right .side-right .intro-content {
-	-webkit-transform: translateY(-50%) translateX(0%) scale(0.6);
-	transform: translateY(-50%) translateX(0%) scale(0.6);
+.oferta-img {
+	display: block;
+	margin: 0 auto;
+	max-width: 60%;
+	max-height: 90px;
+	-webkit-transform-origin: 50% 100%;
+	transform-origin: 50% 100%;
 }
 
-.open-right .page-right {
-	-webkit-transform: translateX(0%);
-	transform: translateX(0%);
+.oferta:hover .oferta-img {
+	-webkit-animation: swing 0.6s forwards;
+	animation: swing 0.6s forwards;
 }
 
-/* Left side open */
-.open-left .side-right {
-	-webkit-transform: translateX(60%);
-	transform: translateX(60%);
-}
-
-.open-left .side-left {
-	z-index: 200;
-	-webkit-transform: translateX(150%);
-	transform: translateX(150%);
-}
-
-.close-left .side-left {
-	z-index: 200;
-}
-
-.open-left .side-left .intro-content {
-	-webkit-transform: translateY(-50%) translateX(-100%) scale(0.6);
-	transform: translateY(-50%) translateX(-100%) scale(0.6);
-}
-
-.open-left .codropsheader {
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transition: opacity 0.3s, visibility 0.1s 0.3s;
-	transition: opacity 0.3s, visibility 0.1s 0.3s;
-}
-
-.open-left .page-left {
-	-webkit-transform: translateX(0%);
-	transform: translateX(0%);
-}
-
-/* Media Queries */
-@media screen and (max-width: 83em) {
-	.intro-content { font-size: 60%; }
-}
-
-@media screen and (max-width: 58em) {
-	body { font-size: 90%; }
-}
-
-@media screen and (max-width: 49.4375em) {
-	.open-right .side-right {
-		-webkit-transform: translateX(-175%);
-		transform: translateX(-175%);
+@keyframes swing {
+  25% {
+		transform: rotate3d(0, 0, 1, 6deg);
 	}
 
-	.open-right .side-left {
-		-webkit-transform: translateX(-100%);
-		transform: translateX(-100%);
+	50% {
+		transform: rotate3d(0, 0, 1, -4deg);
 	}
 
-	.open-left .side-right {
-		-webkit-transform: translateX(100%);
-		transform: translateX(100%);
+	75% {
+		transform: rotate3d(0, 0, 1, 2deg);
 	}
 
-	.open-left .side-left {
-		-webkit-transform: translateX(175%);
-		transform: translateX(175%);
-	}
-
-	.page {
-		width: 100%;
-	}
-
-	.page-right {
-		left: 0;
-		padding-left: 15%;
-	}
-
-	.page-left {
-		padding-right: 15%;
-	}
-
-	.intro-content {
-		width: 100%;
-	}
-
-	.open-right .side-right .intro-content {
-		top: 100%;
-		-webkit-transform: translateY(-150px) translateX(-12.5%) scale(0.5);
-		transform: translateY(-150px) translateX(-12.5%) scale(0.5);
-	}
-
-	.open-left .side-left .intro-content {
-		top: 100%;
-		-webkit-transform: translateY(-150px) translateX(-87.5%) scale(0.5);
-		transform: translateY(-150px) translateX(-87.5%) scale(0.5);
-	}
-
-	.open-right .intro-content h1,
-	.open-left .intro-content h1 {
-		opacity: 0;
-	}
-
-	.back-left {
-		left: 6.25%;
-	}
-
-	.back-right {
-		right: 6.25%;
+	100% {
+		transform: rotate3d(0, 0, 1, 0deg);
 	}
 }
 
-@media screen and (max-width: 42.5em) {
-	body { font-size: 80%; }
-	.intro-content { font-size: 50%; }
+.aplicar {
+	display: inline-block;
+	font-size: 1em;
+	white-space: nowrap;
+	padding: 0.85em 1.25em;
+	cursor: pointer;
+	border: none;
+	background: transparent;
+	text-align: center;
 }
 
-@media screen and (max-height: 41.125em) {
-	.intro-content {
-		-webkit-transform: translateY(-25%) translateX(-50%);
-		transform: translateY(-25%) translateX(-50%);
+.aplicar-boton {
+	background: #2C2D34;
+	color: #fff;
+	border-radius: 2px;
+	-webkit-transition: background 0.2s;
+	transition: background 0.2s;
+}
+
+.aplicar-boton:hover {
+	background: #5C5EDC;
+}
+
+.aplicar-boton span {
+	font-family: 'Raleway', Helvetica, Arial, sans-serif;
+	font-weight: bold;
+	letter-spacing: 1px;
+	font-size: .813em;
+	vertical-align: middle;
+	display: inline-block;
+}
+
+@media screen and (max-width: 59.688em) {
+	.grid {
+		padding: 2em 0.5em;
+		font-size: 65%;
 	}
-}
 
-@media screen and (max-width: 39.375em) {
-	.intro-content .profile { -webkit-transform: scale(0.5); transform: scale(0.5); }
-}
+	.product {
+		margin: 0 0.5em 1em;
+		min-width: 13em;
+	}
 
-@media screen and (max-width: 320px) {
-	body { font-size: 70%; }
+	.product__title {
+		font-size: 115%;
+	}
+
+	.flexbox .product {
+		-webkit-flex: 0 0 13em;
+		-ms-flex: 0 0 13em;
+		flex: 0 0 13em;
+	}
+
+
 }
